weird css overflow issue occurring

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -29,7 +29,7 @@
   overflow-y: auto !important;
 }*/
 
-.tabs-content .tab-rooms, .tab-details{
+.tabs-content .tab-rooms, .tabs-content .tab-details{
   overflow-y: auto !important;
 }
 
